--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    background: #000;
+    color: #fff;
+}
