--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif, ui;
     font-size: 16px;
     background: #000;
     color: #fff;
